fixed it, not sure how, git did not help
- removed div.container
- changed div.left to vh and vw based sizings
- overflow="hidden" seems to have fixed the banner spilling out of div.left

--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,44 @@
-<<<<<<< HEAD
 @font-face {
-    font-family: Norse-Bold;
-    src: url(./assets/Norse-Bold.otf);
+  font-family: Norse-Bold;
+  src: url(./assets/Norse-Bold.otf);
 }
 
-.container {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    margin: 0 auto;
-    width: 1600px;
-    height: 800px;
-    border: 1px solid black;
-    overflow: hidden;
-    position: relative;
-    top: 500;
-    left: 50;
+body {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  margin: 0;
 }
 
 .left {
-    
-    width: 35%;
-    height: 100%;
-    background-image: url(./assets/neom-xhMz5xIbhRg-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  width: 35%;
+  height: 100vh;
+  background-image: url(./assets/neom-xhMz5xIbhRg-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .banner {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    gap: 55px;
-    height: 100px;
-    position: relative;
-    top: 150px;
-    padding-left: 20px;
-    font-family: Norse-Bold;
-    font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  height: 200px;
+  gap: 10px;
+  padding-right: 10px;
+  position: relative;
+  top: 150px;
+  font-family: Norse-Bold;
+  font-size: 2rem;
+  overflow: hidden;
 }
 
 .banner img {
-    height: 100%;
+  height: 75%;
 }
 
 .right {
-    height: 100vh;
+  height: 100vh;
 }
-=======
->>>>>>> parent of 0a66267 (styled left div)
